feat: Update dependencies and component definitions
Updates project dependencies to stable versions and cleans up the list of supported Wokwi component types in the schema. This improves project stability and simplifies the available component set.

--- a/index.html
+++ b/index.html
@@ -1,46 +1,59 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AI Circuit Architect</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script type="module" src="https://unpkg.com/@wokwi/elements@0.48.3/dist/wokwi-elements.bundle.js"></script>
-    <style>
-      /* Custom scrollbar for chat */
-      .scrollbar-hide::-webkit-scrollbar {
-          display: none;
-      }
-      .scrollbar-hide {
-          -ms-overflow-style: none;
-          scrollbar-width: none;
-      }
-      
-      /* Basic Layout resets */
-      html, body, #root {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-      }
-    </style>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>AI Circuit Architect</title>
+  <script>
+    // Polyfill process.env for browser compatibility
+    if (typeof process === 'undefined') {
+      window.process = { env: { NODE_ENV: 'development' } };
+    }
+  </script>
   <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19",
-    "react/": "https://esm.sh/react@19/",
-    "react-dom": "https://esm.sh/react-dom@19",
-    "react-dom/": "https://esm.sh/react-dom@19/",
-    "uuid": "https://esm.sh/uuid@11.0.5",
-    "lucide-react": "https://esm.sh/lucide-react?bundle",
+    "react": "https://esm.sh/react@18.3.1",
+    "react/": "https://esm.sh/react@18.3.1/",
+    "react-dom": "https://esm.sh/react-dom@18.3.1",
+    "react-dom/": "https://esm.sh/react-dom@18.3.1/",
+    "uuid": "https://esm.sh/uuid@9.0.1",
+    "lucide-react": "https://esm.sh/lucide-react@0.294.0?bundle",
     "@google/genai": "https://esm.sh/@google/genai",
     "avr8js": "https://esm.sh/avr8js?bundle"
   }
 }
 </script>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script type="module" src="https://unpkg.com/@wokwi/elements@0.48.3/dist/wokwi-elements.bundle.js"></script>
+  <style>
+    /* Custom scrollbar for chat */
+    .scrollbar-hide::-webkit-scrollbar {
+      display: none;
+    }
+
+    .scrollbar-hide {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
+
+    /* Basic Layout resets */
+    html,
+    body,
+    #root {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+  </style>
 </head>
-  <body class="bg-[#0b0d11] text-white">
-    <div id="root"></div>
-  </body>
+
+<body class="bg-[#0b0d11] text-white">
+  <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
+</body>
+
 </html>
